--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
 </head>
 <body class="boxSizingWrapper">
 
-<div id="main">
+<div id="main" class="containerFluid">
 </div>
 
 <script src="/assets/popup.bundle.js"></script>
